fixed spacings

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,16 @@
   font-family: 'Montserrat';
   margin: 0;
 }
+
+/* for home page */
+@media(min-width: 1100px) {
+  * {
+    font-size: 0.8vw;
+  }
+}
+
+@media(min-width: 2200px) {
+  * {
+    font-size: 1em;
+  }
+}
